# popen-redirections

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: pipes.h
src/: pipes.c
